# FITNESS-GEN

./: main.py  pyproject.toml
src/: requirements.txt
src/api/: main.py
src/api/routes/: assessments.py  measurements.py  students.py
src/api/schemas/: assessments.py  measurements.py  plans.py  students.py
src/core/: settings.py
src/db/: database.py  models.py  schema.sql
src/frontend/: app.py
