[project]
name = "fitness-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "uv>=0.8.14",
    "uvicorn>=0.35.0",
]
